fixed demo to use new config

--- a/demo/Makefile
+++ b/demo/Makefile
@@ -8,13 +8,13 @@ TARGET = demo
 # List C source files here. (C dependencies are automatically generated.)
 # To exclude certain files in a folder remove the $(wildcard) and 
 # list them seperated by spaces, ie src/main.c src/util.c 
-SRC = $(wildcard *.c)
+SRC = $(wildcard *.c) ../prnf.c ../prext.c
 
 # List any extra directories to look for include files here.
 #     Each directory must be seperated by a space.
 #     Use forward slashes for directory separators.
 #     For a directory that has spaces, enclose it in quotes.
-EXTRAINCDIRS = . 
+EXTRAINCDIRS = . ..
 
 # Object and list files directory
 #     To put .o and .lst files alongside .c files use a dot (.), do NOT make
@@ -43,6 +43,12 @@ CFLAGS += -Wno-unused-function
 CFLAGS += -Wno-unused-but-set-variable
 CFLAGS += $(CSTANDARD)
 CFLAGS += $(patsubst %,-I%,$(EXTRAINCDIRS))
+CFLAGS += -DPRNF_SUPPORT_FLOAT
+CFLAGS += -DPRNF_SUPPORT_DOUBLE
+CFLAGS += -DPRNF_SUPPORT_LONG_LONG
+CFLAGS += -DPRNF_COL_ALIGNMENT
+CFLAGS += -DPRNF_CFG_FILE=../prnf_cfg.h
+
 
 # List any extra directories to look for libraries here.
 #     Each directory must be seperated by a space.
