simplified build of demo and test suite

--- a/test/Makefile
+++ b/test/Makefile
@@ -8,7 +8,7 @@ TARGET = test
 # List C source files here. (C dependencies are automatically generated.)
 # To exclude certain files in a folder remove the $(wildcard) and 
 # list them seperated by spaces, ie src/main.c src/util.c 
-SRC = $(wildcard *.c)
+SRC = $(wildcard *.c) 
 
 # List any extra directories to look for include files here.
 #     Each directory must be seperated by a space.
@@ -35,9 +35,10 @@ CDEFS = -DPLATFORM_PC
 CDEFS += -DPRNF_SUPPORT_FLOAT
 CDEFS += -DPRNF_SUPPORT_DOUBLE
 CDEFS += -DPRNF_SUPPORT_LONG_LONG
-CDEFS += -DPRNF_ENG_PREC_DEFAULT=3
-CDEFS += -DPRNF_FLOAT_PREC_DEFAULT=6
 CDEFS += -DPRNF_COL_ALIGNMENT
+CDEFS += -DPRNF_ENG_PREC_DEFAULT=3 
+CDEFS += -DPRNF_FLOAT_PREC_DEFAULT=6 
+CDEFS += -DPRNF_COL_ALIGNMENT 
 
 #---------------- Compiler Options C ----------------
 #  -g 			 debug information
@@ -49,9 +50,9 @@ CFLAGS += -Wno-unused-function
 CFLAGS += -Wno-unused-but-set-variable
 CFLAGS += $(CSTANDARD)
 CFLAGS += $(patsubst %,-I%,$(EXTRAINCDIRS))
-CFLAGS += -fsanitize=address
-CFLAGS += -Wextra
-CFLAGS += -fsanitize=undefined
+CFLAGS += -fsanitize=address 
+CFLAGS += -Wextra 
+CFLAGS += -fsanitize=undefined 
 
 # List any extra directories to look for libraries here.
 #     Each directory must be seperated by a space.
@@ -94,11 +95,8 @@ GENDEPFLAGS = -MMD -MP -MF .dep/$(@F).d
 ALL_CFLAGS = -I. $(CFLAGS) $(GENDEPFLAGS)
 
 # Default target.
-all: begin gccversion buildinfo build end
-
-
+all: begin gccversion build end
 build: tgt
-
 tgt: $(TARGET)
 
 # Eye candy.
@@ -108,23 +106,12 @@ begin:
 	@echo $(MSG_BEGIN)
 
 end:
-	@cat build_date.inc
 	@echo $(MSG_END)
 	@echo
-
-# Gather information about build
-buildinfo:
-	@$(CC) --version | grep gcc | awk '{print "\x22" $$0 "\x22"}' > gcc_version.inc
-	@date --iso-8601=seconds -u | awk '{print "\x22" $$0 "\x22"}' > build_date.inc
-	@read LASTNUM < build_number.inc;	\
-	NEWNUM=$$(($$LASTNUM + 1));			\
-	echo "$$NEWNUM" > build_number.inc
-	@touch version.c
 
 # Display compiler version information.
 gccversion : 
 	@$(CC) --version
-
 
 # Link: create output file from object files.
 .SECONDARY : $(TARGET)
@@ -148,6 +135,7 @@ clean_list :
 	@echo $(MSG_CLEANING)
 	$(REMOVE) $(SRC:%.c=$(OBJLSTDIR)/%.o)
 	$(REMOVE) $(SRC:%.c=$(OBJLSTDIR)/%.lst)
+	$(REMOVE) $(TARGET)
 	$(REMOVEDIR) .dep
 
 # Create object files directory
@@ -157,4 +145,4 @@ $(shell mkdir $(OBJLSTDIR) 2>/dev/null)
 -include $(shell mkdir .dep 2>/dev/null) $(wildcard .dep/*)
 
 # Listing of phony targets.
-.PHONY : all begin end buildinfo gccversion build tgt clean clean_list 
+.PHONY : all begin end gccversion build tgt clean clean_list 
